--- a/TyDtk/TopicQtype1and2Cell.xib
+++ b/TyDtk/TopicQtype1and2Cell.xib
@@ -24,7 +24,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(题型)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0D-gs-ABw">
-                        <rect key="frame" x="45" y="20" width="301" height="20"/>
+                        <rect key="frame" x="45" y="20" width="305" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="133" id="Bp3-bM-LLy"/>
                             <constraint firstAttribute="width" constant="100" id="JzH-gW-odi"/>
@@ -41,22 +41,25 @@
                         </variation>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grzx_icon2" translatesAutoresizingMaskIntoConstraints="NO" id="ble-1I-FrS">
-                        <rect key="frame" x="366" y="20" width="20" height="20"/>
+                        <rect key="frame" x="370" y="20" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="Vri-Nc-2Kr"/>
                             <constraint firstAttribute="height" constant="20" id="gyG-OZ-qb0"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" tag="1111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9U5-Bq-HjU">
-                        <rect key="frame" x="387" y="20" width="45" height="20"/>
+                    <button opaque="NO" tag="1111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9U5-Bq-HjU">
+                        <rect key="frame" x="392" y="20" width="40" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="DYk-WZ-hIc"/>
-                            <constraint firstAttribute="width" constant="45" id="vxI-sd-MFf"/>
+                            <constraint firstAttribute="width" constant="40" id="vxI-sd-MFf"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <state key="normal" title="收藏">
                             <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
+                        <connections>
+                            <action selector="collectBtnClick:" destination="rEa-wQ-A2O" eventType="touchUpInside" id="exc-X2-HW3"/>
+                        </connections>
                     </button>
                     <webView tag="10" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y8X-mC-LqD">
                         <rect key="frame" x="15" y="50" width="412" height="10"/>
@@ -66,7 +69,7 @@
                         </constraints>
                     </webView>
                     <webView tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dk4-R0-8ZK">
-                        <rect key="frame" x="20" y="84" width="402" height="20"/>
+                        <rect key="frame" x="20" y="80" width="402" height="20"/>
                         <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="V74-QP-u2E"/>
@@ -83,7 +86,7 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="y8X-mC-LqD" secondAttribute="trailing" constant="15" id="5UP-jp-z6V"/>
                     <constraint firstItem="h0D-gs-ABw" firstAttribute="leading" secondItem="RAm-F8-rct" secondAttribute="trailing" id="5w7-hG-dNL"/>
-                    <constraint firstItem="9U5-Bq-HjU" firstAttribute="leading" secondItem="ble-1I-FrS" secondAttribute="trailing" constant="1" id="6BP-gK-kQ8"/>
+                    <constraint firstItem="9U5-Bq-HjU" firstAttribute="leading" secondItem="ble-1I-FrS" secondAttribute="trailing" constant="2" id="6BP-gK-kQ8"/>
                     <constraint firstItem="h0D-gs-ABw" firstAttribute="bottom" secondItem="RAm-F8-rct" secondAttribute="bottom" id="BUs-I1-cIY"/>
                     <constraint firstItem="ble-1I-FrS" firstAttribute="top" secondItem="h0D-gs-ABw" secondAttribute="top" id="Dyd-Kn-ZWL"/>
                     <constraint firstItem="RAm-F8-rct" firstAttribute="leading" secondItem="iPV-Ir-l8g" secondAttribute="leading" constant="15" id="Khg-YH-Vdd"/>
@@ -91,6 +94,7 @@
                     <constraint firstItem="Dk4-R0-8ZK" firstAttribute="top" secondItem="0Ti-m9-pOh" secondAttribute="bottom" constant="15" id="OQ6-1S-Ntt"/>
                     <constraint firstItem="RAm-F8-rct" firstAttribute="top" secondItem="iPV-Ir-l8g" secondAttribute="top" constant="20" id="OsB-6Z-Thg"/>
                     <constraint firstItem="0Ti-m9-pOh" firstAttribute="leading" secondItem="iPV-Ir-l8g" secondAttribute="leading" constant="10" id="SFv-Bq-C5Y"/>
+                    <constraint firstItem="Dk4-R0-8ZK" firstAttribute="top" secondItem="y8X-mC-LqD" secondAttribute="bottom" constant="20" id="UKO-mb-q76"/>
                     <constraint firstItem="Dk4-R0-8ZK" firstAttribute="leading" secondItem="iPV-Ir-l8g" secondAttribute="leading" constant="20" id="W0P-7p-ggx"/>
                     <constraint firstAttribute="trailing" secondItem="9U5-Bq-HjU" secondAttribute="trailing" constant="10" id="WOE-T6-ybP"/>
                     <constraint firstAttribute="trailing" secondItem="0Ti-m9-pOh" secondAttribute="trailing" constant="10" id="XtO-iN-O6Y"/>
@@ -100,13 +104,20 @@
                     <constraint firstItem="0Ti-m9-pOh" firstAttribute="top" secondItem="y8X-mC-LqD" secondAttribute="bottom" constant="8" id="w2E-Au-Qyh"/>
                     <constraint firstItem="y8X-mC-LqD" firstAttribute="top" secondItem="9U5-Bq-HjU" secondAttribute="bottom" constant="10" id="y93-NI-NV3"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="OQ6-1S-Ntt"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="buttonCollect" destination="9U5-Bq-HjU" id="MLo-Yb-DXI"/>
+                <outlet property="buttonCollect" destination="9U5-Bq-HjU" id="tMQ-oG-3YY"/>
+                <outlet property="buttonCollectWidth" destination="vxI-sd-MFf" id="PiX-JE-GbT"/>
                 <outlet property="imageVIewCollect" destination="ble-1I-FrS" id="nsJ-Vb-bxa"/>
                 <outlet property="labNumberWidth" destination="Nfs-xV-q5d" id="oLR-kh-rpx"/>
                 <outlet property="labTopicNumber" destination="RAm-F8-rct" id="WKT-k1-bQb"/>
                 <outlet property="labTopicType" destination="h0D-gs-ABw" id="s8m-pH-ZkH"/>
+                <outlet property="viewLiness" destination="0Ti-m9-pOh" id="0n9-Bj-4Pf"/>
                 <outlet property="webSelectHeight" destination="V74-QP-u2E" id="CuS-Zu-OAy"/>
                 <outlet property="webTitleHeight" destination="oDK-st-h1J" id="y7b-vW-JeW"/>
                 <outlet property="webVIewSelect" destination="Dk4-R0-8ZK" id="7Q8-CJ-n72"/>
