--- a/TyDtk/paterTopicQtype6Cell.xib
+++ b/TyDtk/paterTopicQtype6Cell.xib
@@ -26,8 +26,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(题型)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TwM-wL-laH">
                         <rect key="frame" x="45" y="20" width="300" height="20"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="20" id="1Uc-tE-Bfm"/>
                             <constraint firstAttribute="width" constant="133" id="Btx-nD-DXq"/>
-                            <constraint firstAttribute="height" constant="20" id="EId-0f-bKY"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -38,69 +38,33 @@
                             </mask>
                         </variation>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grzx_icon2" translatesAutoresizingMaskIntoConstraints="NO" id="Oe9-5v-GTK">
-                        <rect key="frame" x="365" y="20" width="20" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="JcG-iP-YaZ"/>
-                            <constraint firstAttribute="width" constant="20" id="YRO-NM-F2b"/>
-                        </constraints>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g9B-81-Ihd">
-                        <rect key="frame" x="385" y="20" width="45" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="45" id="C6D-jj-LhP"/>
-                            <constraint firstAttribute="height" constant="20" id="pBn-C6-ZPR"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="收藏">
-                            <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
-                        </state>
-                    </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9de-xd-5CK">
-                        <rect key="frame" x="10" y="78" width="420" height="1"/>
-                        <color key="backgroundColor" red="0.82416421250000005" green="0.82416421250000005" blue="0.82416421250000005" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="qxh-nv-hEz"/>
-                        </constraints>
-                    </view>
                     <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ETY-Pc-a3Q">
                         <rect key="frame" x="15" y="50" width="410" height="20"/>
                         <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="9u1-kk-gU5"/>
+                            <constraint firstAttribute="height" constant="20" id="vdR-N3-2dk"/>
                         </constraints>
                     </webView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="9de-xd-5CK" firstAttribute="top" secondItem="ETY-Pc-a3Q" secondAttribute="bottom" constant="8" id="1TJ-en-GWs"/>
-                    <constraint firstAttribute="trailing" secondItem="g9B-81-Ihd" secondAttribute="trailing" constant="10" id="CGe-Fy-Z9l"/>
-                    <constraint firstItem="TwM-wL-laH" firstAttribute="bottom" secondItem="ije-HR-8B5" secondAttribute="bottom" id="MLo-ox-Rh7"/>
+                    <constraint firstItem="ETY-Pc-a3Q" firstAttribute="top" secondItem="TwM-wL-laH" secondAttribute="bottom" constant="10" id="A0J-f2-uCs"/>
+                    <constraint firstItem="ETY-Pc-a3Q" firstAttribute="leading" secondItem="Zyn-9A-9L8" secondAttribute="leading" constant="15" id="Hgn-th-8rb"/>
                     <constraint firstItem="ije-HR-8B5" firstAttribute="top" secondItem="Zyn-9A-9L8" secondAttribute="top" constant="20" id="Psr-0c-jbg"/>
-                    <constraint firstItem="ETY-Pc-a3Q" firstAttribute="leading" secondItem="Zyn-9A-9L8" secondAttribute="leading" constant="15" id="cqh-jR-QPU"/>
-                    <constraint firstItem="Oe9-5v-GTK" firstAttribute="leading" secondItem="TwM-wL-laH" secondAttribute="trailing" constant="20" id="dlN-bw-dzc"/>
-                    <constraint firstAttribute="trailing" secondItem="9de-xd-5CK" secondAttribute="trailing" constant="10" id="fCP-Nm-C3w"/>
-                    <constraint firstAttribute="trailing" secondItem="ETY-Pc-a3Q" secondAttribute="trailing" constant="15" id="g6W-Iq-Xhs"/>
-                    <constraint firstItem="TwM-wL-laH" firstAttribute="leading" secondItem="ije-HR-8B5" secondAttribute="trailing" id="gSN-p7-9r1"/>
-                    <constraint firstItem="Oe9-5v-GTK" firstAttribute="top" secondItem="TwM-wL-laH" secondAttribute="top" id="gmd-oS-yV4"/>
-                    <constraint firstItem="g9B-81-Ihd" firstAttribute="top" secondItem="TwM-wL-laH" secondAttribute="top" id="id7-iY-Evf"/>
-                    <constraint firstItem="9de-xd-5CK" firstAttribute="leading" secondItem="Zyn-9A-9L8" secondAttribute="leading" constant="10" id="kIq-f8-Lx4"/>
+                    <constraint firstItem="TwM-wL-laH" firstAttribute="bottom" secondItem="ije-HR-8B5" secondAttribute="bottom" id="WeC-0l-QOO"/>
+                    <constraint firstAttribute="trailing" secondItem="ETY-Pc-a3Q" secondAttribute="trailing" constant="15" id="fgQ-m6-Xvb"/>
+                    <constraint firstAttribute="trailing" secondItem="TwM-wL-laH" secondAttribute="trailing" constant="95" id="mQL-kl-2vp"/>
                     <constraint firstItem="ije-HR-8B5" firstAttribute="leading" secondItem="Zyn-9A-9L8" secondAttribute="leading" constant="15" id="odT-bi-Buh"/>
-                    <constraint firstItem="g9B-81-Ihd" firstAttribute="leading" secondItem="Oe9-5v-GTK" secondAttribute="trailing" id="pfA-oD-YYa"/>
-                    <constraint firstItem="ETY-Pc-a3Q" firstAttribute="top" secondItem="g9B-81-Ihd" secondAttribute="bottom" constant="10" id="stI-fr-Bem"/>
+                    <constraint firstItem="TwM-wL-laH" firstAttribute="leading" secondItem="ije-HR-8B5" secondAttribute="trailing" id="qRX-hT-ZyN"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="imageViewCollect" destination="Oe9-5v-GTK" id="vSq-8T-wTE"/>
                 <outlet property="labNumber" destination="ije-HR-8B5" id="dgf-GM-1dI"/>
                 <outlet property="labNumberWidth" destination="ewZ-ye-08V" id="AWS-I0-bfD"/>
                 <outlet property="labTitleType" destination="TwM-wL-laH" id="nTx-Wc-quW"/>
-                <outlet property="webTitleHeight" destination="9u1-kk-gU5" id="KY4-0s-ACK"/>
+                <outlet property="webTitleHeight" destination="vdR-N3-2dk" id="N8q-gb-fa6"/>
                 <outlet property="webViewTitle" destination="ETY-Pc-a3Q" id="K5Y-rV-98O"/>
             </connections>
             <point key="canvasLocation" x="357" y="298.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="grzx_icon2" width="20" height="20"/>
-    </resources>
 </document>
