--- a/TyDtk/Base.lproj/LaunchScreen.storyboard
+++ b/TyDtk/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testFirst" translatesAutoresizingMaskIntoConstraints="NO" id="FBv-fo-XbF">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FBv-fo-XbF" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="9xR-y4-Jk0"/>
+                            <constraint firstAttribute="trailing" secondItem="FBv-fo-XbF" secondAttribute="trailing" id="Tzx-it-vZb"/>
+                            <constraint firstItem="FBv-fo-XbF" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="bRC-yG-oIN"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="FBv-fo-XbF" secondAttribute="bottom" id="fZU-GB-8Kp"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +34,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="testFirst" width="640" height="1136"/>
+    </resources>
 </document>
