--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1318,9 +1318,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5di-MW-dFB">
-                                <rect key="frame" x="104" y="263" width="180" height="84"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5di-MW-dFB">
+                                <rect key="frame" x="135" y="278" width="94" height="19"/>
+                                <state key="normal" title="Button" image="bj01"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.77091916360000001" green="0.84952596749999998" blue="0.9031413613" alpha="1" colorSpace="calibratedRGB"/>
@@ -1966,6 +1966,7 @@
     </scenes>
     <resources>
         <image name="arrow_down" width="18" height="10"/>
+        <image name="bj01" width="16" height="16"/>
         <image name="btm_icon1" width="20" height="20"/>
         <image name="btm_icon4" width="20" height="20"/>
         <image name="grzx_icon2" width="20" height="20"/>
